# esp32-s3-lvgl-uart-program

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.old
components/lvgl__lvgl/: lv_conf_template.h
components/lvgl__lvgl/demos/widgets/: lv_demo_widgets.c
components/lvgl__lvgl/docs/: example_list.py
components/lvgl__lvgl/env_support/cmsis-pack/: lv_conf_cmsis.h
components/lvgl__lvgl/examples/porting/: lv_port_disp_template.c
components/lvgl__lvgl/scripts/: style_api_gen.py
components/lvgl__lvgl/src/: lv_conf_internal.h
components/lvgl__lvgl/src/core/: lv_event.h  lv_obj.h
components/lvgl__lvgl/src/extra/themes/basic/: lv_theme_basic.c
components/lvgl__lvgl/src/extra/themes/default/: lv_theme_default.c
main/: CMakeLists.txt  main.cc
main/components/: indexer.cc
main/components/base/: button.cc  renderer.cc
main/components/base/headers/: base_widget.hh  button.hh  renderer.hh  styling.hh
main/core/: waveshare_rgb_lcd_port.c  waveshare_rgb_lcd_port.h
